--- a/index.html
+++ b/index.html
@@ -3,6 +3,19 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="author" content="Mateo Rendon"/>
+    <meta name="description" content="Little Lemon Restaurant"/>
+    <meta name="robots" content="index, follow">
+    <!-- Open Graph Protocol Tags -->
+    <meta property="og:title" content="Our Menu" />
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="logo.png">
+    <meta property="og:url" content="https://littlelemon">
+    <!-- More OG Protocol tags -->
+    <meta property="og:description"  content="Little Lemon is a family-owned Mediterranean restaurant, focused on traditional recipes served with a modern twist.">
+    <meta property="og:locale"  content="en_US">
+    <meta property="og:site_name"  content="Little Lemon">
+    <!-- CSS links -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Little Lemon</title>
     <link rel="stylesheet" href="styles.css" />
@@ -13,18 +26,113 @@
     </header>
     <nav>
       <ul>
-        <li><a href="">Home</a></li>
-        <li><a href="">Location</a></li>
-        <li><a href="">Blog</a></li>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="location.html">Location</a></li><!DOCTYPE html>
+<html lang="en">
+<head>
+  <title>Little Lemon</title>
+
+  <meta property="og:title" content="Our Menu">
+  <meta property="og:type"  content="website">
+  <meta property="og:image" content="logo.png">
+  <meta property="og:url"   content="https://littlelemon/">
+  <meta property="og:description" content="Little Lemon is a family-owned Mediterranean restaurant, focused on traditional recipes served with a modern twist.">
+  <meta property="og:locale" content="en_US">
+  <meta property="og:site_name" content="Little Lemon">
+
+  <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+  <header>
+    <img src="logo.png">
+  </header>
+  <main>
+    <form action="">
+      <div>
+        <label for="user_email">Email</label>
+        <input type="email" id="user_email" name="user_email" required>
+      </div>
+      <div>
+        <label for="booking_date"Date>Date</label>
+        <input type="date" id="booking_date" name="booking_date" required>
+      </div>
+      <div>
+        <label for="people_number">Number of People</label>
+        <input type="number" id="people_number" name="people_number" min="1" max="8" required>
+      </div>
+      <div>
+        <label for="">I agree to the cancellation policy</label>
+        <input type="checkbox" required>
+      </div>
+      <button type="submit">Book Now</button>
+    </form>
+    
+  </main>
+</body>
+
+</html>
       </ul>
     </nav>
     <main>
       <h1>Blog</h1>
       <article>
         <h2>20% off this weekend</h2>
-        <p>come down to Little Lemon and your meal will be 20% off!</p>
+        <p>Come down to Little Lemon and your meal will be 20% off!</p>
       </article>
+      <article>
+        <h2>Our Menu</h2>
+        <p>We've updated our menu with new dinners</p>
+      </article>
+      <form action="" method="post">
+        <legend>Make a reservation</legend>
+        <div>
+          <label for="booking_date">Booking Date</label>
+          <input type="date" id="booking_date" name="booking_date">
+        </div>
+        <div>
+          <label for="booking_people">Number of People</label>
+          <input type="range" id="booking_people" name="booking_people" min="1" max="10" value="4" oninput="this.nextElementSibling.value = this.value">
+          <output>4</output>
+        </div>
+        <div>
+          <label for="booking_location">Location</label>
+          <input id="booking_location" name="booking_location" list="locations">
+          <datalist id="locations">
+            <option value="Downtown" selected></option>
+            <option value="Uptown"></option>
+          </datalist>
+        </div>
+
+      </form>
+      <h3>Sign up</h3>
+      <form action="" method="post">
+        <div>
+          <label for="user_first_name">First Name</label><br>
+          <input type="text" id="user_first_name" name="user_first_name" placeholder="Your First Name" required>
+        </div>
+        <div>
+          <label for="user_last_name">Last Name</label><br>
+          <input type="text" id="user_last_name" name="user_last_name" placeholder="Your last Name" required>
+        </div>
+        <div>
+          <label for="user_email">Email</label><br>
+          <input type="email" id="user_email" name="user_email" placeholder="example@mail.com" required>
+        </div>
+        <div>
+          <label for="user_password">Password</label><br>
+          <input type="password" id="user_password" name="user_password" min="8"  required>
+        </div>
+        <div>
+          <label for="user_confirm_password">Confrim Password</label><br>
+          <input type="password" id="user_confirm_password" name="user_confirm_password" minlength="8" required>
+        </div>
+        <div>
+          <button type="submit">sign Up</button>
+        </div>
+      </form>
     </main>
-    <footer></footer>
+    <footer>
+      <p>	&#169; Little Lemon 2024.</p>
+    </footer>
   </body>
 </html>
