--- a/index.html
+++ b/index.html
@@ -83,6 +83,24 @@
         <h2>Our Menu</h2>
         <p>We've updated our menu with new dinners</p>
       </article>
+      <!--  -->
+      <!-- iframes -->
+      <!--  -->
+      <iframe src="placeholder.png" width="320" sandbox="" allow="camera 'none'; microphone 'none'; payment 'none'"></iframe>
+      <!--  -->
+      <!-- ADDING MEDIA -->
+      <!--  -->
+      <!-- most video files supported for we browsers are:  .mp4, .webm, .ogg -->
+      <!-- most audio files supported for web browsers are: mp4, .wav, .ogg -->
+      <video width="320" heigth="240"  constrols> 
+        <source src="" type="video/mp4">
+      </video>
+      <audio loop controls>
+        <source src="" type="">
+      </audio>
+      <!--  -->
+      <!-- FORMS VALIDATION -->
+      <!--  -->
       <form action="" method="post">
         <legend>Make a reservation</legend>
         <div>
